[tool.poetry]
name = "sandslash"
version = "0.1.0"
description = "Scrape and serve basic Pokemon data"
authors = ["bosmobosmo <bimo.pangestu09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
peewee = "^3.17.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
